--- a/src/main/resources/Templates/registration-success.html
+++ b/src/main/resources/Templates/registration-success.html
@@ -10,7 +10,7 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
-            display: flex;
+            /*display: flex;*/
             align-items: center;
             justify-content: center;
             height: 100vh;
@@ -28,6 +28,7 @@
 </head>
 <body>
 <h2>Registration Successful</h2>
-<p>An email has been sent to the provided email address. Your registration is complete!</p>
+<br>
+<p>An email has been sent to the provided email address. <br>Your registration is complete!</p>
 </body>
 </html>
